langtools/test/tools/javac/4846262/Test.out
Test.java:4: error: not a statement
        abcdefg
        ^
Test.java:4: error: ';' expected
        abcdefg
               ^
2 errors
