langtools/test/tools/javac/4846262/Test.java
/* /nodynamiccopyright/ */
public class Test {
    public void test() {
        abcdefg
    }
}
